--- a/Mission11/Views/Shared/BookInfo.cshtml
+++ b/Mission11/Views/Shared/BookInfo.cshtml
@@ -3,7 +3,7 @@
 <div class="card m-1 p-1">
     <h3>
         @Model.Title
-        <span class="badge rounded-pill bg-primary text-white float-end"><small>$@Model.Price</small></span>
+        <span class="badge rounded-pill bg-primary text-white float-end"><small>$@Model.Price.ToString("0.00")</small></span>
     </h3>
     <ul>
         <li>Author: @Model.Author</li>
