--- a/Mission11/Views/Shared/_Layout.cshtml
+++ b/Mission11/Views/Shared/_Layout.cshtml
@@ -14,9 +14,9 @@
         <span class="navbar-brand m-lg-2">BOOK STORE</span>
     </div>
 
-    <div class="row m-1 p-1">
+@*     <div class="row m-1 p-1">
         <div class="col-3">Add Filtering Later</div>
-    </div>
+    </div> *@
     <div class="container col-9">
         <main role="main" class="pb-3">
             @RenderBody()
